# gl_samples

assimp_gl/: CMakeLists.txt
assimp_gl/src/: main.cpp
assimp_gl/src/rendering/: Mesh.h  Model.h  Shader.cpp  Shader.h  Texture.cpp
learnopengl/: CMakeLists.txt
learnopengl/src/: main.cpp
